# RosHololens2CatkinWs

./: .gitignore  LICENSE  README.md
src/bayes_people_tracker/: CMakeLists.txt  README.md
src/bayestracking/: README.md
src/hololens_depth_data_receiver/: CMakeLists.txt  README.md  package.xml
src/hololens_depth_data_receiver_msgs/: CMakeLists.txt  README.md  package.xml
src/hololens_msgs/: CMakeLists.txt  README.md  package.xml
src/hololens_point_cloud_control_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/hololens_point_cloud_msgs/: CMakeLists.txt  package.xml
src/hololens_point_cloud_receiver/: CMakeLists.txt  package.xml
src/hololens_stereo_image_receiver/: CMakeLists.txt  README.md  package.xml
src/object3d_detector/: CMakeLists.txt  README.md  package.xml
src/object3d_detector/config/: object3d_detector_multiclass.yaml  object3d_detector_srv.yaml
src/object3d_detector/launch/: object3d_detector.launch  object3d_detector.rviz  object3d_detector_multiclass.launch  object3d_detector_multiclass_no_rviz.launch  object3d_detector_multiclass_with_rviz.launch  object3d_detector_ol.launch  object3d_detector_ol.rviz  object3d_detector_srv.launch
src/object3d_detector/libsvm/: ball_hololens.model  ball_hololens.range  pedestrian_hololens.model  pedestrian_hololens.range  pedestrian_hololens.scale  robot_hololens.model  robot_hololens.range
src/object3d_detector/msg/: ClassificationResult.msg  DetectionResult.msg  DetectionResults.msg
src/object3d_detector/src/: object3d_detector.cpp  object3d_detector_ol.cpp  object3d_detector_srv.cpp
src/object3d_detector/srv/: ClassifyClusters.srv
(+179 files in other folders)
